--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ body {
     max-width: 1280px;
   }
 }
-
 .sp-tb {
   padding-top: 80px;
   padding-bottom: 80px;
@@ -46,24 +45,17 @@ body {
 
 header {
   background-color: #f4ffcf;
-  border-bottom: 1px solid #0000001a;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1019607843);
 }
-
 header nav.navbar {
   padding: 23px 0;
 }
-
 header nav.navbar .nav-link {
   margin-left: 20px;
   color: #0a3366;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 header nav.navbar .nav-link::after {
   content: "";
   width: 12px;
@@ -72,16 +64,10 @@ header nav.navbar .nav-link::after {
   display: inline-block;
   margin-left: 5px;
 }
-
 header nav.navbar .header-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 header nav.navbar .header-icons li + li {
   margin-left: 15px;
 }
@@ -120,13 +106,11 @@ h1,
   padding: 160px 0;
   position: relative;
 }
-
 .banner-sec .face-img-2 {
   position: absolute;
   bottom: 30px;
   left: 45%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   border-bottom-right-radius: 50px;
   width: 100px;
   height: 100px;
@@ -138,14 +122,12 @@ h1,
   padding-left: 70px;
   position: relative;
 }
-
 .banner-content p {
   padding: 12px 20px 12px 24px;
   margin: 20px 0 40px 0;
   background: linear-gradient(82.2deg, rgba(10, 51, 102, 0.1) 0%, rgba(10, 51, 102, 0) 80%);
   border-left: 4px solid #0a3366;
 }
-
 .banner-content .face-img-1 {
   position: absolute;
   top: -130px;
@@ -153,11 +135,9 @@ h1,
   width: 100px;
   height: 100px;
 }
-
 .banner-content .face-img-1 img {
   border-radius: 50%;
 }
-
 .banner-content .face-img-1 span {
   width: 1px;
   height: 600px;
@@ -166,10 +146,8 @@ h1,
   position: absolute;
   top: calc(100% + 20px);
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
-
 .banner-content .face-img-1::before, .banner-content .face-img-1::after {
   content: "";
   width: 120px;
@@ -181,7 +159,6 @@ h1,
   top: -10px;
   left: -10px;
 }
-
 .banner-content .face-img-1::after {
   width: 140px;
   height: 140px;
@@ -195,13 +172,11 @@ h1,
   bottom: 0;
   max-width: 640px;
 }
-
 .banner-img svg {
   position: absolute;
   top: 0;
   left: 10px;
 }
-
 .banner-img :nth-child(2) {
   left: unset;
   right: 0;
@@ -210,33 +185,21 @@ h1,
 
 .button {
   font-weight: 500;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 8px 10px 8px 25px;
   border-radius: 16px;
-  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
 }
-
 .button .icon {
   background-color: #fff;
   color: #0a3366;
   border-radius: 10px;
   width: 44px;
   height: 44px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   margin-left: 10px;
 }
 
@@ -244,7 +207,6 @@ h1,
   background: #0a3366;
   color: #fff;
 }
-
 .primary-btn:hover {
   background-color: #f46700;
   color: #fff;
@@ -254,7 +216,6 @@ h1,
   background: #f46700;
   color: #fff;
 }
-
 .secondary-btn:hover {
   background-color: #0a3366;
   color: #fff;
@@ -263,7 +224,6 @@ h1,
 .about-sec {
   position: relative;
 }
-
 .about-sec .about-face-img {
   width: 150px;
   position: absolute;
@@ -274,15 +234,10 @@ h1,
 .marquee-1 {
   background-color: #0a3366;
 }
-
 .marquee-1 h4 {
   padding: 20px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   font-weight: 300;
   font-size: 24px;
   line-height: 38px;
@@ -292,7 +247,6 @@ h1,
   align-items: center;
   overflow: hidden;
 }
-
 .marquee-1 h4::before {
   content: "";
   width: 20px;
@@ -309,13 +263,11 @@ h1,
   background-color: #0a3366;
   border-radius: 15px;
 }
-
 .skin-care-box h3 {
   font-size: 24px;
   font-weight: 700;
   color: #fff;
 }
-
 .skin-care-box img,
 .skin-care-box p,
 .skin-care-box ul {
@@ -327,14 +279,92 @@ h1,
   min-width: 400px;
   border-radius: 20px;
 }
-
 .skin-care-box.skin-care-active h3 {
   color: #0a3366;
 }
-
 .skin-care-box.skin-care-active img,
 .skin-care-box.skin-care-active p,
 .skin-care-box.skin-care-active ul {
   display: block;
 }
-/*# sourceMappingURL=style.css.map */
+
+.heading-wrap {
+  max-width: 980px;
+  margin-inline: auto;
+}
+
+.products-wrap .nav-tabs {
+  margin: 40px 0;
+  border: 0;
+  gap: 15px;
+}
+.products-wrap .nav-tabs .nav-link {
+  font-size: 16px;
+  color: #0a3366;
+  padding: 10px 26px;
+  border-radius: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1019607843);
+  transition: all ease-in-out 0.3s;
+}
+.products-wrap .nav-tabs .nav-link.active, .products-wrap .nav-tabs .nav-link:hover {
+  color: #fff;
+  background-color: #0a3366;
+}
+
+.product-item {
+  background-color: #fff;
+  border-radius: 15px;
+}
+.product-item .product-img {
+  position: relative;
+}
+.product-item .product-img .offer-text {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  border-radius: 50px;
+  padding: 5px 15px;
+  background-color: #f46700;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 18px;
+}
+.product-item .product-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 25px;
+  border-top: 1px solid #efe9e9;
+}
+.product-item .product-content h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+  color: #0a3366;
+}
+.product-item .product-content .price {
+  font-size: 16px;
+  line-height: 25px;
+  text-decoration: none;
+  margin-top: 5px;
+}
+.product-item .product-content .price .offered-price {
+  font-weight: 700;
+  color: #f46700;
+}
+.product-item .product-content .price .original-price {
+  font-weight: 300;
+  color: #816e6e;
+  margin-left: 5px;
+}
+
+.arrow-btn {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: #efe9e9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}/*# sourceMappingURL=style.css.map */
