--- a/scss/style.scss
+++ b/scss/style.scss
@@ -319,3 +319,96 @@ h1,
     display: block;
   }
 }
+
+.heading-wrap {
+  max-width: 980px;
+  margin-inline: auto;
+}
+
+.products-wrap {
+  .nav-tabs {
+    margin: 40px 0;
+    border: 0;
+    gap: 15px;
+
+    .nav-link {
+      font-size: 16px;
+      color: $primary-color;
+      padding: 10px 26px;
+      border-radius: 50px;
+      border: 1px solid #0000001a;
+      transition: all ease-in-out 0.3s;
+
+      &.active,
+      &:hover {
+        color: #fff;
+        background-color: $primary-color;
+      }
+    }
+  }
+}
+
+.product-item {
+  background-color: #fff;
+  border-radius: 15px;
+
+  .product-img {
+    position: relative;
+
+    .offer-text {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      border-radius: 50px;
+      padding: 5px 15px;
+      background-color: $secondary-color;
+      color: #fff;
+      font-size: 12px;
+      font-weight: 700;
+      line-height: 18px;
+    }
+  }
+
+  .product-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 25px;
+    border-top: 1px solid #efe9e9;
+
+    h3 {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 28px;
+      color: $primary-color;
+    }
+
+    .price {
+      font-size: 16px;
+      line-height: 25px;
+      text-decoration: none;
+      margin-top: 5px;
+
+      .offered-price {
+        font-weight: 700;
+        color: $secondary-color;
+      }
+
+      .original-price {
+        font-weight: 300;
+        color: #816e6e;
+        margin-left: 5px;
+      }
+    }
+  }
+}
+
+.arrow-btn {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: #efe9e9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
