--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,7 +300,7 @@ h1,
 .skin-care-slider {
   .swiper-slide {
     flex: 0 0 100px;
-    width: 100px;
+    transition: all 0.3s ease-in-out;
 
     h3 {
       font-size: 24px;
@@ -308,11 +308,19 @@ h1,
       color: #fff;
     }
 
+    .skin-care-box {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      background-color: #fff;
+      min-width: 645px;
+      border-radius: 20px;
+      padding: 30px;
+    }
+
     &:not(.skin-care-active) {
       .skin-care-box {
-        // display: none;
-        width: 0;
-        min-width: 0px;
+        display: none;
       }
 
       .skin-item {
@@ -375,15 +383,6 @@ h1,
       }
 
       .skin-care-box {
-        transition: all ease-in-out 0.3s;
-        display: flex;
-        align-items: center;
-        gap: 30px;
-        background-color: #fff;
-        // min-width: 400px;
-        border-radius: 20px;
-        padding: 30px;
-
         .skin-care-box-image {
           width: 250px;
           height: 400px;
@@ -697,6 +696,9 @@ h1,
 }
 
 .faq-item {
+  position: relative;
+  z-index: 9;
+
   .accordion {
     margin-top: 30px;
     padding-bottom: 22px;
