--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,71 @@ h1,
   background-color: #ecf8c6;
 }
 
+.play-btn {
+  background-color: rgba(255, 255, 255, 0.7019607843);
+  -webkit-backdrop-filter: blur(8.5px);
+          backdrop-filter: blur(8.5px);
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  position: relative;
+  border-radius: 100vmax;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.play-btn i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #0f0f0f;
+  font-size: 24px;
+  transition: all ease-in-out 0.3s;
+}
+.play-btn:hover i {
+  color: #f46700;
+}
+.play-btn .text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-transform: uppercase;
+  color: #0f0f0f;
+  font-size: 16px;
+  font-weight: 500;
+  animation: rotate 15s linear infinite;
+}
+.play-btn .text span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 1.2em;
+  transform-origin: 0 0px;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes leftDown {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translateY(12px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateX(-12px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
 .banner-sec {
   background-color: #f4ffcf;
   background-image: url(../images/banner-bg.jpg);
@@ -114,6 +179,7 @@ h1,
   background-position: center;
   padding: 160px 0;
   position: relative;
+  overflow: hidden;
 }
 .banner-sec .face-img-2 {
   position: absolute;
@@ -125,6 +191,7 @@ h1,
   height: 100px;
   display: inline-block;
   overflow: hidden;
+  animation: leftDown 6s linear infinite;
 }
 
 .banner-content {
@@ -143,6 +210,7 @@ h1,
   left: -30px;
   width: 100px;
   height: 100px;
+  animation: leftDown 6s linear infinite;
 }
 .banner-content .face-img-1 img {
   border-radius: 50%;
@@ -185,11 +253,17 @@ h1,
   position: absolute;
   top: 0;
   left: 10px;
+  animation: rotate 15s linear infinite;
 }
-.banner-img :nth-child(2) {
+.banner-img svg:nth-child(2) {
   left: unset;
   right: 0;
   top: 310px;
+}
+.banner-img .banner-play-btn {
+  position: absolute;
+  bottom: 120px;
+  right: -30px;
 }
 
 .button {
@@ -233,6 +307,14 @@ h1,
 .about-sec {
   position: relative;
 }
+.about-sec .about-left {
+  position: relative;
+}
+.about-sec .about-left .play-btn-wrap {
+  position: absolute;
+  bottom: -50px;
+  left: 120px;
+}
 .about-sec .about-face-img {
   width: 150px;
   position: absolute;
@@ -270,7 +352,7 @@ h1,
 
 .skin-care-slider .swiper-slide {
   flex: 0 0 100px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.5s;
 }
 .skin-care-slider .swiper-slide h3 {
   font-size: 24px;
@@ -282,7 +364,7 @@ h1,
   align-items: center;
   gap: 30px;
   background-color: #fff;
-  min-width: 645px;
+  min-width: 780px;
   border-radius: 20px;
   padding: 30px;
 }
@@ -325,7 +407,8 @@ h1,
   top: 0;
   left: 0;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   z-index: -2;
 }
 .skin-care-slider .swiper-slide:not(.skin-care-active) h3 {
@@ -348,7 +431,8 @@ h1,
 }
 .skin-care-slider .swiper-slide.skin-care-active .skin-care-box .skin-care-box-image img {
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .skin-care-slider .swiper-slide.skin-care-active .skin-care-box h3 {
   color: #0a3366;
@@ -521,8 +605,9 @@ h1,
 }
 
 .why-us-item ul {
-  column-count: 2;
-  margin: 20px 0;
+  -moz-column-count: 2;
+       column-count: 2;
+  margin: 25px 0;
 }
 .why-us-item ul li {
   display: flex;
@@ -662,14 +747,31 @@ h1,
   left: 50%;
   transform: translateX(-50%);
   width: 640px;
+  height: 640px;
   z-index: -1;
+  color: #f46700;
+}
+.faq-img .img-circle svg {
+  animation: rotate 25s linear infinite;
+}
+
+.outline-btn-white {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+.outline-btn-white:hover {
+  background-color: #0a3366;
+  color: #fff;
+  border-color: #0a3366;
 }
 
 footer {
   background-color: #07121e;
-  padding: 60px;
+  padding: 60px 0 0 0;
   color: #fff;
   background: url(../images/footer-bg.png), #07121e;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-blend-mode: luminosity;
 }
 footer h4 {
@@ -684,6 +786,7 @@ footer .subscription input {
   width: 100%;
   font-size: 16px;
   padding: 18px 26px;
+  padding-right: 50px;
   color: #bed2e7;
   background-color: #07121e;
   border: 0;
@@ -724,4 +827,51 @@ footer .footer-mid .footer-mid-item a {
 }
 footer .footer-mid .footer-mid-item a:hover {
   color: #f46700;
+}
+footer .get-in-touch {
+  background-color: #07121e;
+  padding: 10px 32px 25px 32px;
+  border-radius: 30px;
+  margin-top: 60px;
+  color: #fff;
+}
+footer .get-in-touch .get-in-touch-item {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-top: 15px;
+}
+footer .get-in-touch .get-in-touch-item svg {
+  color: #f46700;
+  font-size: 20px;
+  min-width: 20px;
+}
+footer .get-in-touch .get-in-touch-item h5 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 6px;
+}
+footer .get-in-touch .get-in-touch-item svg {
+  color: #fff;
+  font-size: 60px;
+  width: 60px;
+  height: 60px;
+  padding: 18px;
+  background-color: #f46700;
+  border-radius: 50%;
+  overflow: visible;
+}
+footer .get-in-touch .get-in-touch-item h6 {
+  font-size: 18px;
+  font-weight: 300;
+  color: #fff;
+}
+footer .get-in-touch .get-in-touch-item p {
+  color: #fff;
+  font-size: 15px;
+  font-weight: 300;
+}
+footer .footer-copyright {
+  text-align: center;
+  padding: 25px 0;
 }/*# sourceMappingURL=style.css.map */
