--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,6 +116,78 @@ h1,
   background-color: $bg-color2;
 }
 
+.play-btn {
+  background-color: #ffffffb3;
+  backdrop-filter: blur(8.5px);
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  position: relative;
+  border-radius: 100vmax;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #0f0f0f;
+    font-size: 24px;
+    transition: all ease-in-out 0.3s;
+  }
+
+  &:hover {
+    i {
+      color: $secondary-color;
+    }
+  }
+
+  .text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-transform: uppercase;
+    color: #0f0f0f;
+    font-size: 16px;
+    font-weight: 500;
+    animation: rotate 15s linear infinite;
+
+    span {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      font-size: 1.2em;
+      transform-origin: 0 0px;
+    }
+  }
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes leftDown {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translateY(12px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateX(-12px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
 .banner-sec {
   background-color: #f4ffcf;
   background-image: url(../images/banner-bg.jpg);
@@ -124,6 +196,7 @@ h1,
   background-position: center;
   padding: 160px 0;
   position: relative;
+  overflow: hidden;
 
   .face-img-2 {
     position: absolute;
@@ -135,6 +208,7 @@ h1,
     height: 100px;
     display: inline-block;
     overflow: hidden;
+    animation: leftDown 6s linear infinite;
   }
 }
 
@@ -159,6 +233,7 @@ h1,
     left: -30px;
     width: 100px;
     height: 100px;
+    animation: leftDown 6s linear infinite;
 
     img {
       border-radius: 50%;
@@ -207,11 +282,19 @@ h1,
     position: absolute;
     top: 0;
     left: 10px;
+    animation: rotate 15s linear infinite;
+
+    &:nth-child(2) {
+      left: unset;
+      right: 0;
+      top: 310px;
+    }
   }
-  :nth-child(2) {
-    left: unset;
-    right: 0;
-    top: 310px;
+
+  .banner-play-btn {
+    position: absolute;
+    bottom: 120px;
+    right: -30px;
   }
 }
 
@@ -259,6 +342,16 @@ h1,
 .about-sec {
   position: relative;
 
+  .about-left {
+    position: relative;
+
+    .play-btn-wrap {
+      position: absolute;
+      bottom: -50px;
+      left: 120px;
+    }
+  }
+
   .about-face-img {
     width: 150px;
     position: absolute;
@@ -300,7 +393,7 @@ h1,
 .skin-care-slider {
   .swiper-slide {
     flex: 0 0 100px;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.5s;
 
     h3 {
       font-size: 24px;
@@ -313,7 +406,7 @@ h1,
       align-items: center;
       gap: 30px;
       background-color: #fff;
-      min-width: 645px;
+      min-width: 780px;
       border-radius: 20px;
       padding: 30px;
     }
@@ -603,7 +696,7 @@ h1,
 .why-us-item {
   ul {
     column-count: 2;
-    margin: 20px 0;
+    margin: 25px 0;
 
     li {
       display: flex;
@@ -765,15 +858,34 @@ h1,
     left: 50%;
     transform: translateX(-50%);
     width: 640px;
+    height: 640px;
     z-index: -1;
+    color: $secondary-color;
+
+    svg {
+      animation: rotate 25s linear infinite;
+    }
+  }
+}
+
+.outline-btn-white {
+  background-color: transparent;
+  border: 1px solid #fff;
+
+  &:hover {
+    background-color: $primary-color;
+    color: #fff;
+    border-color: $primary-color;
   }
 }
 
 footer {
   background-color: #07121e;
-  padding: 60px;
+  padding: 60px 0 0 0;
   color: #fff;
   background: url(../images/footer-bg.png), #07121e;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-blend-mode: luminosity;
 
   h4 {
@@ -789,6 +901,7 @@ footer {
       width: 100%;
       font-size: 16px;
       padding: 18px 26px;
+      padding-right: 50px;
       color: #bed2e7;
       background-color: #07121e;
       border: 0;
@@ -837,5 +950,60 @@ footer {
         }
       }
     }
+  }
+
+  .get-in-touch {
+    background-color: #07121e;
+    padding: 10px 32px 25px 32px;
+    border-radius: 30px;
+    margin-top: 60px;
+    color: #fff;
+
+    .get-in-touch-item {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      margin-top: 15px;
+
+      svg {
+        color: $secondary-color;
+        font-size: 20px;
+        min-width: 20px;
+      }
+
+      h5 {
+        font-size: 24px;
+        font-weight: 700;
+        margin-bottom: 6px;
+      }
+
+      svg {
+        color: #fff;
+        font-size: 60px;
+        width: 60px;
+        height: 60px;
+        padding: 18px;
+        background-color: $secondary-color;
+        border-radius: 50%;
+        overflow: visible;
+      }
+
+      h6 {
+        font-size: 18px;
+        font-weight: 300;
+        color: #fff;
+      }
+
+      p {
+        color: #fff;
+        font-size: 15px;
+        font-weight: 300;
+      }
+    }
+  }
+
+  .footer-copyright {
+    text-align: center;
+    padding: 25px 0;
   }
 }
